--- a/Forge/package.json
+++ b/Forge/package.json
@@ -16,10 +16,18 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/uuid": "^10.0.0",
+    "events": "^3.3.0",
     "react": "19.0.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-app-auth": "^7.1.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-haptic-feedback": "^2.3.3",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
