--- a/Forge/package.json
+++ b/Forge/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@types/react-dom": "^19.1.2",
@@ -32,6 +33,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "uuid": "^11.1.0"
   },
